# player

./: .gitignore  Makefile  pyproject.toml
player/player/: settings.py  urls.py
player/vlog/: models.py  urls.py  views.py
player/vlog/migrations/: 0001_initial.py  0002_auto_20210331_0723.py  0003_remove_video_video_id.py  0004_video_uploaded.py  0005_auto_20210331_0803.py
player/vlog/templates/vlog/: video_detail.html  video_list.html
