[tool.poetry]
name = "player"
version = "0.1.0"
description = ""
authors = ["Sergey Kornienko <skornienko29@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"
pytz = "^2021.1"
django-environ = "^0.4.5"
ffmpeg = "^1.4"

[tool.poetry.dev-dependencies]
gunicorn = "^20.1.0"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
